# turborepo-fullstack-starter

./: .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.husky/: post-merge  (+2 more)
apps/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  package.json
apps/api/docs/: ARCHITECTURE.md  CICD.md  PRISMA.md  SWAGGER.md
apps/api/migrations/: 20250309_000000_create_users.sql
apps/api/prisma/: schema.prisma
apps/api/src/: app.controller.ts  lib.rs  main.rs  main.ts
apps/api/src/api/: mod.rs  openapi.rs  responses.rs  router.rs
apps/api/src/api/handlers/: health.rs  mod.rs  user_handler.rs
apps/api/src/api/middleware/: mod.rs
apps/api/src/application/dto/: mod.rs  user_dto.rs
apps/api/src/application/services/: mod.rs  user_service.rs
apps/api/src/config/: mod.rs
apps/api/src/domain/: errors.rs  mod.rs
apps/api/src/domain/entities/: user.rs
apps/api/src/domain/repositories/: mod.rs  user_repository.rs
apps/api/src/infrastructure/database/: connection.rs  mod.rs
apps/api/src/infrastructure/database/repositories/: mod.rs  user_repository_impl.rs
apps/api/src/prisma/: prisma.service.ts
apps/api/src/users/: index.ts  users.controller.ts  users.module.ts  users.service.ts
apps/api/src/users/application/: index.ts
apps/api/src/users/domain/: index.ts
apps/api/src/users/dto/: create-user.dto.ts  user-response.dto.ts
apps/api/src/users/presentation/: users.controller.ts
apps/api/test/: app.e2e-spec.ts
(+124 files in other folders)
